--- a/serverless.yaml
+++ b/serverless.yaml
@@ -11,9 +11,9 @@ provider:
   region: eu-west-2
   iam:
     role: arn:aws:iam::366877760811:role/lambda-role-peerkat-nft-data-serverless
-  runtime: python3.8
+  runtime: python3.9
   layers:
-    - arn:aws:lambda:eu-west-2:770693421928:layer:Klayers-p38-pandas:10
+    - arn:aws:lambda:eu-west-2:770693421928:layer:Klayers-p39-pandas:9
   architecture: x86_64
 
 package:
@@ -48,6 +48,18 @@ functions:
     handler: handlers.issuer_taxon_average_price_dumps
     name: issuers-nft-pricing-${sls:stage}
     timeout: 900
+  issuers-nft-pricing-invoker:
+    handler: handlers.issuer_pricing_invoker
+    name: issuers-pricing-invoker-${sls:stage}
+    timeout: 900
+  raw-csv-dump:
+    handler: handlers.raw_data_dump
+    name: raw-csv-dump-${sls:stage}
+    timeout: 900
+  nft-table-dump:
+    handler: handlers.table_dump
+    name: nft-table-dump-${sls:stage}
+    timeout: 900
 
 stepFunctions:
   stateMachines:
@@ -58,7 +70,7 @@ stepFunctions:
         States:
           NFTDumps:
             Type: Parallel
-            End: true
+            Next: NFTPricing
             Branches:
               - StartAt: IssuerNFTDumps
                 States:
@@ -74,10 +86,29 @@ stepFunctions:
                     Resource:
                       Fn::GetAtt: [ issuers-taxon-dump, Arn ]
                     End: true
-
+          NFTPricing:
+            Type: Task
+            Resource:
+              Fn::GetAtt: [ issuers-nft-pricing-invoker, Arn ]
+            End: true
       events:
         - schedule:
             rate: cron(0/60 * ? * * *)
+#    XLS20DataDump:
+#      name: XLS20DataDump${sls:stage}
+#      definition:
+#        StartAt: CSVDump
+#        States:
+#          CSVDump:
+#            Type: Task
+#            Next: NFTableDump
+#            Resource:
+#              Fn::GetAtt: [ raw-csv-dump, Arn ]
+#          NFTableDump:
+#            Type: Task
+#            Resource:
+#              Fn::GetAtt: [ nft-table-dump, Arn ]
+#            End: true
 
 plugins:
   - serverless-python-requirements
