feat: added twitter dump to lambda

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -64,6 +64,10 @@ functions:
     handler: handlers.graph_dump
     name: nft-graph-dump-${sls:stage}
     timeout: 900
+  nft-twitter-dump:
+    handler: handlers.twitter_dump
+    name: nft-twitter-dump-${sls:stage}
+    timeout: 900
 
 stepFunctions:
   stateMachines:
