--- a/serverless.yaml
+++ b/serverless.yaml
@@ -47,77 +47,71 @@ functions:
   issuer-token-price-dumps:
     handler: handlers.tokens_price_dump
     name: issuer-token-price-dumps-${sls:stage}
+    timeout: 900
+  tracked-issuers-token-price-dumps:
+    handler: handlers.tracked_issuers_token_price_dumps
+    name: tracked-issuers-token-price-dumps-${sls:stage}
+    timeout: 900
+  issuer-price-dump:
+    handler: handlers.issuer_price_dump
+    name: issuer-price-dump-${sls:stage}
     memorySize: 2048
     timeout: 900
-#  issuers-nft-pricing-invoker:
-#    handler: handlers.issuer_pricing_invoker
-#    name: issuers-pricing-invoker-${sls:stage}
-#    timeout: 900
-#  raw-csv-dump:
-#    handler: handlers.raw_data_dump
-#    name: raw-csv-dump-${sls:stage}
-#    timeout: 900
-#  nft-table-dump:
-#    handler: handlers.table_dump
-#    name: nft-table-dump-${sls:stage}
-#    timeout: 900
-#  nft-graph-dump:
-#    handler: handlers.graph_dump
-#    name: nft-graph-dump-${sls:stage}
-#    timeout: 900
-#  nft-twitter-dump:
-#    handler: handlers.twitter_dump
-#    name: nft-twitter-dump-${sls:stage}
-#    timeout: 900
+  tracked-issuers-price-dumps:
+    handler: handlers.tracked_issuers_price_dumps
+    name: tracked-issuers-price-dumps-${sls:stage}
+    memorySize: 2048
+    timeout: 900
+  csv-dump:
+    handler: handlers.csv_dump
+    name: csv-dump-${sls:stage}
+    timeout: 900
+  nft-table-dump:
+    handler: handlers.table_dump
+    name: nft-table-dump-${sls:stage}
+    timeout: 900
+  nft-graph-dump:
+    handler: handlers.graph_dump
+    name: nft-graph-dump-${sls:stage}
+    timeout: 900
+  nft-twitter-dump:
+    handler: handlers.twitter_dump
+    name: nft-twitter-dump-${sls:stage}
+    timeout: 900
 
-#stepFunctions:
-#  stateMachines:
-#    IssuersNFTDataDump:
-#      name: IssuersNFTDataDump${sls:stage}
-#      definition:
-#        StartAt: NFTDumps
-#        States:
-#          NFTDumps:
-#            Type: Parallel
-#            Next: NFTPricing
-#            Branches:
-#              - StartAt: IssuerNFTDumps
-#                States:
-#                  IssuerNFTDumps:
-#                    Type: Task
-#                    Resource:
-#                      Fn::GetAtt: [ issuers-nft-dump, Arn ]
-#                    End: true
-#              - StartAt: IssuerTaxonDumps
-#                States:
-#                  IssuerTaxonDumps:
-#                    Type: Task
-#                    Resource:
-#                      Fn::GetAtt: [ issuers-taxon-dump, Arn ]
-#                    End: true
-#          NFTPricing:
-#            Type: Task
-#            Resource:
-#              Fn::GetAtt: [ issuers-nft-pricing-invoker, Arn ]
-#            End: true
-#      events:
-#        - schedule:
-#            rate: cron(0/60 * ? * * *)
-#    XLS20DataDump:
-#      name: XLS20DataDump${sls:stage}
-#      definition:
-#        StartAt: CSVDump
-#        States:
-#          CSVDump:
-#            Type: Task
-#            Next: NFTableDump
-#            Resource:
-#              Fn::GetAtt: [ raw-csv-dump, Arn ]
-#          NFTableDump:
-#            Type: Task
-#            Resource:
-#              Fn::GetAtt: [ nft-table-dump, Arn ]
-#            End: true
+stepFunctions:
+  stateMachines:
+    IssuersNFTDataDump:
+      name: IssuersNFTDataDump${sls:stage}
+      definition:
+        StartAt: NFTDumps
+        States:
+          NFTDumps:
+            Type: Parallel
+            Next: NFTPricing
+            Branches:
+              - StartAt: IssuerNFTDumps
+                States:
+                  IssuerNFTDumps:
+                    Type: Task
+                    Resource:
+                      Fn::GetAtt: [ issuers-nft-dump, Arn ]
+                    End: true
+              - StartAt: IssuerTaxonDumps
+                States:
+                  IssuerTaxonDumps:
+                    Type: Task
+                    Resource:
+                      Fn::GetAtt: [ issuers-taxon-dump, Arn ]
+                    End: true
+          NFTPricing:
+            Type: Task
+            Resource:
+              Fn::GetAtt: [ tracked-issuers-token-price-dumps, Arn ]
+            End: True
+      events:
+        - schedule:
+            rate: cron(0/60 * ? * * *)
 
 plugins:
   - serverless-python-requirements
