--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,12 @@
-aioboto3==10.1.0
-aiobotocore==2.4.0
-aiohttp==3.8.3
-pandas==1.5.2
-s3transfer==0.6.0
+aioboto3==11.0.1
+aiohttp==3.8.4
+aiopg==1.4.0
 xrpl-py==1.7.0
+snscrape==0.6.1.20230314
+fsspec==2023.3.0
+s3fs==2023.3.0
+tweepy==4.13.0
+pandas==1.5.3
+s3transfer==0.6.0
+pytest==7.2.2
+pytest-asyncio==0.20.3
