fixed lambda function errors

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -36,6 +36,9 @@ package:
     - '!logger.log'
     - '!bastion-access.pem'
     - '!airflow_dags/'
+    - '!dags/'
+    - '!logs/'
+    - '!plugins/'
     - '!tests/'
     - '!conftest.py'
     - '!main.py'
