--- a/serverless.yaml
+++ b/serverless.yaml
@@ -32,7 +32,9 @@ package:
     - '!pyproject.toml'
     - '!requirements-dev.txt'
     - '!env.example'
-    - '!env.local'
+    - '!.env.local'
+    - '!.env.test'
+    - '!env/**'
     - '!logger.log'
     - '!bastion-access.pem'
     - '!airflow_dags/'
