added config to addres details script

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,195 @@
 aioboto3==11.2.0
+aiobotocore==2.5.0
 aiohttp==3.8.4
+aioitertools==0.11.0
 aiopg==1.4.0
-xrpl-py==2.0.0
-snscrape==0.7.0.20230622
-fsspec==2023.6.0
-s3fs==2023.6.0
-tweepy==4.14.0
+aiosignal==1.3.1
+alembic==1.10.2
+amqp==5.1.1
+anyio==3.6.2
+apache-airflow==2.5.2
+apache-airflow-providers-celery==3.1.0
+apache-airflow-providers-common-sql==1.3.4
+apache-airflow-providers-ftp==3.3.1
+apache-airflow-providers-http==4.2.0
+apache-airflow-providers-imap==3.1.1
+apache-airflow-providers-sqlite==3.3.1
+apispec==3.3.2
+appnope==0.1.3
+argcomplete==2.1.1
+asgiref==3.6.0
+asn1crypto==1.5.1
+asttokens==2.1.0
+async-timeout==4.0.2
+asyncpg==0.27.0
+attrs==22.2.0
+Babel==2.12.1
+backcall==0.2.0
+base58==2.1.1
+beautifulsoup4==4.11.1
 billiard==4.1.0
+black==23.1.0
+blinker==1.5
+boto3==1.26.76
+botocore==1.29.76
+cachelib==0.9.0
+cattrs==22.2.0
+celery==5.2.7
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+clickclick==20.10.2
+colorama==0.4.6
+colorlog==4.8.0
+ConfigUpdater==3.1.1
+connexion==2.14.2
+cramjam==2.6.2
+cron-descriptor==1.2.35
+croniter==1.3.8
+cryptography==39.0.2
+decorator==5.1.1
+Deprecated==1.2.13
+dill==0.3.1.1
+dnspython==2.3.0
+docutils==0.19
+ECPy==1.2.5
+email-validator==1.3.1
+exceptiongroup==1.1.1
+executing==1.2.0
+fastparquet==2022.12.0
+filelock==3.8.2
+Flask==2.2.3
+Flask-AppBuilder==4.1.4
+Flask-Babel==2.0.0
+Flask-Caching==2.0.2
+Flask-JWT-Extended==4.4.4
+Flask-Login==0.6.2
+Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.1.1
+flower==1.2.0
+frozenlist==1.3.3
+fsspec==2023.6.0
+graphviz==0.20.1
+greenlet==2.0.2
+gunicorn==20.1.0
+h11==0.12.0
+httpcore==0.13.7
+httpx==0.18.2
+humanize==4.6.0
+idna==3.4
+importlib-metadata==4.13.0
+inflection==0.5.1
+iniconfig==2.0.0
+ipdb==0.13.9
+ipython==8.7.0
+isort==5.12.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==4.17.3
+kombu==5.2.4
+lazy-object-proxy==1.9.0
+linkify-it-py==2.0.0
+lockfile==0.12.2
+lxml==4.9.2
+Mako==1.2.4
+Markdown==3.4.1
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.3.5
+mdurl==0.1.2
+multidict==6.0.4
+mypy-extensions==1.0.0
+numpy==1.23.5
+oauthlib==3.2.2
+oscrypto==1.3.0
+packaging==21.3
+pandas==1.5.3
+parso==0.8.3
+pathspec==0.9.0
+pendulum==2.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
+pluggy==1.0.0
+prison==0.2.1
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+psutil==5.9.4
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==10.0.1
+pycparser==2.21
+pycryptodome==3.18.0
+pycryptodomex==3.18.0
+Pygments==2.14.0
+PyJWT==2.6.0
+pyOpenSSL==23.2.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
+PySocks==1.7.1
+pytest==7.4.0
+pytest-asyncio==0.21.1
+python-daemon==3.0.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+python-nvd3==0.15.0
+python-slugify==8.0.1
+pytz==2022.7.1
+pytzdata==2020.1
+PyYAML==6.0
+requests==2.28.2
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rich==13.3.2
+s3fs==2023.6.0
+s3transfer==0.6.1
+setproctitle==1.3.2
+six==1.16.0
+sniffio==1.3.0
+snowflake-connector-python==3.0.4
+snscrape==0.7.0.20230622
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.46
+SQLAlchemy-JSONField==1.0.1.post0
+SQLAlchemy-Utils==0.40.0
+sqlparse==0.4.3
+stack-data==0.6.2
+tabulate==0.9.0
+tenacity==8.2.2
+termcolor==2.2.0
+text-unidecode==1.3
+toml==0.10.2
+tomli==2.0.1
+tornado==6.2
+traitlets==5.5.0
+tweepy==4.14.0
+types-Deprecated==1.2.9
+typing_extensions==4.5.0
+uc-micro-py==1.0.1
+unicodecsv==0.14.1
+urllib3==1.26.15
+vine==5.0.0
+wcwidth==0.2.6
+websockets==10.4
+Werkzeug==2.2.3
+wrapt==1.15.0
+WTForms==3.0.1
+xrpl-py==2.0.0
+yarl==1.8.2
+zipp==3.15.0
