fixed error in token-history endpoint

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -73,7 +73,9 @@ functions:
     name: nft-graph-dump-${sls:stage}
     timeout: 900
   token-history:
-    handler: handlers.token_history
+    handler: sls_lambda/handlers.token_history
+    name: nft-token-history-${sls:stage}
+    timeout: 600
     events:
       - httpApi:
           path: /token-history/{token_id}
